--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -296,3 +296,5 @@ Apr 20, 2001
  - bugfix in new WinMain() startup code
 May 2, 2001
  - fixed Help|README when using compiled-in Tcl code
+May 18, 2001
+ - Windows: added rc file with icon
