*** empty log message ***

--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-
 OMNeT++
 =======
 
@@ -17,5 +16,9 @@ subdirectory contains the HTML version of the manual.
 Enjoy!
 
 Andras
+
+--
+Andras Varga
+andras@whale.hit.bme.hu
 
 
