--- a/src/utils/README
+++ b/src/utils/README
@@ -3,11 +3,8 @@ All kinds of scripts:
  opp_makemake - create makefile for a simulation
  splitvec     - split an output vector file to separate vectors
  splitvec.bat - splitvec's DOS version
- dos2unix     - convert text files to Unix
+ dos2unix     - convert Windows text files to Unix format
  seedtool.cc  - generates seeds for random number generators
- readme       - this file
- tcl2.c       - utility for embedding Tcl source into an executable
- prephtml     - used during development
+ tcl2c.c      - utility for embedding Tcl source into an executable
  replace.c    - MSVC: substitute @something@ variables into makefiles, .bat files
 
---VA
