--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -298,3 +298,4 @@ May 2, 2001
  - fixed Help|README when using compiled-in Tcl code
 May 18, 2001
  - Windows: added rc file with icon
+------ omnetpp-2.1 released ------
