--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -426,3 +426,4 @@ Mar 10, 2001
    that later I'll add makefiles for the free command-line bc5.5 compiler.
 Mar 27, 2001
  - Makefile.vc change: replaced $(TKENV_EMBED_SUFFIX) with $(TKENV_EMBED_TCL).
+------ omnetpp-2.1 released ------
