--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -125,3 +125,4 @@ March 29, 2001
  - replace utility renamed to opp_replace
 May 24, 2001
  - prephtml, wc-l moved to _scripts
+------ omnetpp-2.1 released ------
