--- a/tutorial/ChangeLog
+++ b/tutorial/ChangeLog
@@ -12,3 +12,4 @@ May 8, 2001 (Nicky)
  - corrected typos in tutorial.tex
  - improved doc_src makefile
  - other smaller fixes
+------ omnetpp-2.1 released ------
